# openKate

./: .gitignore  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt
apps/web/: eslint.config.js  package-lock.json  package.json  tsconfig.json
deploy/: otel-collector.yaml
deploy/docker/: playwright-worker.Dockerfile  python-service.Dockerfile  web.Dockerfile
docs/: openkate-rd-design.md
docs/operations/: backup-restore.md  capacity.md  incident-runbook.md  install.md  upgrade.md
docs/versions/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md
migrations/agent/: 001_schema.sql  002_knowledge.sql
migrations/asset/: 001_schema.sql
migrations/connector/: 001_schema.sql  002_connectors.sql  003_pull_requests.sql  004_ci_runs.sql  005_sync_cursors.sql
migrations/execution/: 001_schema.sql  002_persistent_documents.sql  003_executor_capabilities.sql  004_external_callbacks.sql  005_device_leases.sql
migrations/governance/: 001_schema.sql  002_project_event_receipts.sql  (+5 more)
tests/: test_agent_service.py  test_asset_service.py  test_connector_service.py  test_database_permissions.py  test_execution_plan.py  test_execution_run.py  test_execution_workflow.py  test_executors.py  test_gateway_auth.py  test_governance_service.py  test_messaging.py  test_project_event_consumer.py  test_project_service.py  test_report_service.py  test_run_report.py  test_service_baseline.py  test_temporal_baseline.py  test_validation_service.py
(+48 files in other folders)
