[project]
name = "openkate"
version = "0.3.0"
description = "OpenKATE intelligent business validation platform"
requires-python = ">=3.9"

[tool.uv]
package = false

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/python", "services/project-service", "services/gateway-service"]

[tool.ruff]
line-length = 200
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true
